--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -1,7 +1,7 @@
 ---
 common:
-  box_name: debian/contrib-buster64
-  box_version: 10.20210409.1
+  box_name: debian/bullseye64
+  box_version: 11.20210409.1
   # Name of the storage controller to add the DATA disk.
   # To find the exact name, start the box a first time and look at the storage settings in VirtualBox
   sata_controller_name: "SATA Controller"
