--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -148,6 +148,10 @@
   tags: kubernetes-app-home-roomassistant
   when: roomassistant_enabled | bool
 
+- import_playbook: app-home-esphome.yml
+  tags: kubernetes-app-home-esphome
+  when: esphome_enabled | bool
+
 - import_playbook: app-home-zwavejs2mqtt.yml
   tags: kubernetes-app-home-zwavejs2mqtt
   when: zwavejs2mqtt_enabled | bool
