--- a/ansible/install_applications/roles/home-esphome.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-esphome.deploy/tasks/main.yml
@@ -5,6 +5,12 @@
   vars:
     application_namespace: "{{ esphome.namespace }}"
 
+- name: Deploy ESPHome backup script
+  import_tasks: ../../_base.deploy/tasks/backup.yml
+  vars:
+    app_backup: "{{ esphome.app_backup }}"
+  tags: backup
+
 - name: Ensure BusyBox image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
