Add support for mDNS on hosts

--- a/ansible/install_infra/roles/common/vars/main.yml
+++ b/ansible/install_infra/roles/common/vars/main.yml
@@ -20,3 +20,7 @@ common_default_packages:
   - rsync
   - nfs-common
   - git-core
+  # support mDNS
+  - avahi-daemon
+  - avahi-discover
+  - libnss-mdns
