Mount esphome-config on master-1

--- a/ansible/inventories/vagrant/host_vars/master-test-1/storage.yml
+++ b/ansible/inventories/vagrant/host_vars/master-test-1/storage.yml
@@ -5,3 +5,5 @@ glusterfs_volume_mounts:
     mount_path: /data/volumes/homeassistant-config
   nodered-data:
     mount_path: /data/volumes/nodered-data
+  esphome-config:
+    mount_path: /data/volumes/esphome-config
