--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -26,6 +26,11 @@ master-test-1
 master-test-2
 master-test-3
 
+[chrony_servers]
+master-test-1
+master-test-2
+master-test-3
+
 [keepalived:children]
 loadbalancers
 wireguard_servers
