--- a/ansible/install_infra/roles/keepalived/tasks/add-virtual-ip.yml
+++ b/ansible/install_infra/roles/keepalived/tasks/add-virtual-ip.yml
@@ -4,4 +4,12 @@
   template:
     dest: "{{ keepalived.include_conf_dir }}/{{ keepalived_instance.name }}.conf"
     src: instance.conf.j2
+  when: keepalived_instance_enabled | default(true)
+  notify: Restart Keepalived
+
+- name: Configure (disabled) Keepalived instance
+  template:
+    dest: "{{ keepalived.include_conf_dir }}/{{ keepalived_instance.name }}.conf.disabled"
+    src: instance.conf.j2
+  when: not (keepalived_instance_enabled | default(true))
   notify: Restart Keepalived
