--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -36,6 +36,12 @@ loadbalancers
 wireguard_servers
 kubernetes_masters
 
+[letsencrypt_master]
+master-test-1
+
+[letsencrypt_clients:children]
+loadbalancers
+
 [loadbalancers]
 master-test-1
 master-test-2
