Add support for cerbot dns mode

--- a/ansible/install_infra/roles/letsencrypt-generate/defaults/main.yml
+++ b/ansible/install_infra/roles/letsencrypt-generate/defaults/main.yml
@@ -5,3 +5,5 @@ letsencrypt_certificates: []
   #email: email@k8stest.com
   #mode: standalone
   #live: true
+
+#letsencrypt_gandi_api_key: "APIKEY"
