Add support for SAN

--- a/ansible/install_infra/roles/letsencrypt-generate/defaults/main.yml
+++ b/ansible/install_infra/roles/letsencrypt-generate/defaults/main.yml
@@ -2,6 +2,7 @@
 
 letsencrypt_certificates: []
   #- domain: k8stest.com
+  #san: ["*.k8stest.com"]
   #email: email@k8stest.com
   #mode: standalone
   #live: true
