--- a/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
+++ b/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
@@ -8,6 +8,15 @@ openssl_custom_pki:
     certs:
       - name: "{{ web_base_domain }}"
         common_name: "{{ web_base_domain }}"
+        san: ["*.{{ web_base_domain }}"]
+        country_name: FR
+        state_or_province_name: France
+        locality_name: Paris
+        organization_name: Test
+        email_address: user@mail.net
+      - name: "intra.{{ web_base_domain }}"
+        common_name: "intra.{{ web_base_domain }}"
+        san: ["*.intra.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -15,27 +24,23 @@ openssl_custom_pki:
         email_address: user@mail.net
       - name: "auth.{{ web_base_domain }}"
         common_name: "auth.{{ web_base_domain }}"
+        san: ["*.auth.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
-      - name: "registry.{{ web_base_domain }}"
-        common_name: "registry.{{ web_base_domain }}"
+      - name: "auth.intra.{{ web_base_domain }}"
+        common_name: "auth.intra.{{ web_base_domain }}"
+        san: ["*.auth.intra.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
-      - name: "infra.{{ web_base_domain }}"
-        common_name: "infra.{{ web_base_domain }}"
-        country_name: FR
-        state_or_province_name: France
-        locality_name: Paris
-        organization_name: Test
-        email_address: user@mail.net
-      - name: "unifi.{{ web_base_domain }}"
-        common_name: "unifi.{{ web_base_domain }}"
+      - name: "infra.intra.{{ web_base_domain }}"
+        common_name: "infra.intra.{{ web_base_domain }}"
+        san: ["*.infra.intra.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -43,6 +48,7 @@ openssl_custom_pki:
         email_address: user@mail.net
       - name: "web.{{ web_base_domain }}"
         common_name: "web.{{ web_base_domain }}"
+        san: ["*.web.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -50,27 +56,39 @@ openssl_custom_pki:
         email_address: user@mail.net
       - name: "home.{{ web_base_domain }}"
         common_name: "home.{{ web_base_domain }}"
+        san: ["*.home.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
-      - name: "stream.{{ web_base_domain }}"
-        common_name: "stream.{{ web_base_domain }}"
+      - name: "home.intra.{{ web_base_domain }}"
+        common_name: "home.intra.{{ web_base_domain }}"
+        san: ["*.home.intra.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
-      - name: "dev.{{ web_base_domain }}"
-        common_name: "dev.{{ web_base_domain }}"
+      - name: "stream.intra.{{ web_base_domain }}"
+        common_name: "stream.intra.{{ web_base_domain }}"
+        san: ["*.stream.intra.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
-      - name: "dl.{{ web_base_domain }}"
-        common_name: "dl.{{ web_base_domain }}"
+      - name: "dev.intra.{{ web_base_domain }}"
+        common_name: "dev.intra.{{ web_base_domain }}"
+        san: ["*.dev.intra.{{ web_base_domain }}"]
+        country_name: FR
+        state_or_province_name: France
+        locality_name: Paris
+        organization_name: Test
+        email_address: user@mail.net
+      - name: "dl.intra.{{ web_base_domain }}"
+        common_name: "dl.intra.{{ web_base_domain }}"
+        san: ["*.dl.intra.{{ web_base_domain }}"]
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
