--- a/ansible/install_applications/vars/infra-docker-registry.yml
+++ b/ansible/install_applications/vars/infra-docker-registry.yml
@@ -30,6 +30,6 @@ docker_registry:
 
   servername: "{{ docker_registry_servername | default('registry.' + _docker_registry_var_loader.namespace + '.svc.cluster.local') }}"
   port: "{{ _docker_registry_var_loader.port }}"
-  url: "registry.{{ web_base_domain }}"
+  url: "registry.intra.{{ web_base_domain }}"
   notification_endpoints: "{{ docker_registry_notification_endpoints | default([]) }}"
   users: "{{ docker_registry_users | default([]) }}"
