--- a/ansible/install_applications/vars/auth-phpldapadmin.yml
+++ b/ansible/install_applications/vars/auth-phpldapadmin.yml
@@ -29,6 +29,7 @@ phpldapadmin:
     limits_cpu: "{{ phpldapadmin_container_limits_cpu | default('250m') }}"
     limits_memory: "{{ phpldapadmin_container_limits_memory | default('256Mi') }}"
   
+  context_root: "{{ phpldapadmin_context_root | default() }}"
   ldap_servername: "{{ phpldapadmin_ldap_servername | default(openldap.ldap.servername) }}"
   basedn: "{{ openldap.ldap.basedn }}"
   bind_id: "{{ phpldapadmin_bind_id | default(openldap.ldap.readonly_user_dn) }}"
