--- a/ansible/install_applications/vars/web-homer.yml
+++ b/ansible/install_applications/vars/web-homer.yml
@@ -6,6 +6,7 @@ _homer_var_loader:
     name: "nginx"
     tag: "1.21.1-alpine"
   release: v21.07.1
+  context_root: "{{ homer_context_root | default('') }}"
 
 homer:
   enabled: "{{ homer_enabled | default(True) }}"
@@ -13,7 +14,7 @@ homer:
   namespace: "web-homer"
   base_image: "{{ _homer_var_loader.base_image }}"
   release: "{{ _homer_var_loader.release }}"
-  context_root: "/homer"
+  context_root: "{{ _homer_var_loader.context_root }}"
 
   labels_def:
     app.kubernetes.io/name: homer
