--- a/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
+++ b/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
@@ -22,6 +22,22 @@ openssl_custom_pki:
         locality_name: Paris
         organization_name: Test
         email_address: user@mail.net
+      - name: "log.intra.{{ web_base_domain }}"
+        common_name: "log.intra.{{ web_base_domain }}"
+        san: ["*.log.intra.{{ web_base_domain }}"]
+        country_name: FR
+        state_or_province_name: France
+        locality_name: Paris
+        organization_name: Test
+        email_address: user@mail.net
+      - name: "monitoring.intra.{{ web_base_domain }}"
+        common_name: "monitoring.intra.{{ web_base_domain }}"
+        san: ["*.monitoring.{{ web_base_domain }}"]
+        country_name: FR
+        state_or_province_name: France
+        locality_name: Paris
+        organization_name: Test
+        email_address: user@mail.net
       - name: "auth.{{ web_base_domain }}"
         common_name: "auth.{{ web_base_domain }}"
         san: ["*.auth.{{ web_base_domain }}"]
