--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/tasks/main.yml
@@ -95,12 +95,12 @@
 
 - name: Get current logstash {{ elasticsearch.logstash_policy.name }} policy
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_opendistro/_ism/policies/{{ elasticsearch.logstash_policy.name }}"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_opendistro/_ism/policies/{{ elasticsearch.logstash_policy.name }}"
     method: GET
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     validate_certs: no
-    status_code: [ 200, 404 ]
+    status_code: [200, 404]
     force_basic_auth: yes
     user: "{{ elasticsearch.admin_user.user }}"
     password: "{{ elasticsearch.admin_user.password }}"
@@ -108,14 +108,14 @@
 
 - name: Create logstash {{ elasticsearch.logstash_policy.name }} policy
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_opendistro/_ism/policies/{{ elasticsearch.logstash_policy.name }}"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_opendistro/_ism/policies/{{ elasticsearch.logstash_policy.name }}"
     method: PUT
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     body: "{{ logstash_policy_content }}"
     body_format: json
     validate_certs: no
-    status_code: [ 201 ]
+    status_code: [201]
     force_basic_auth: yes
     user: "{{ elasticsearch.admin_user.user }}"
     password: "{{ elasticsearch.admin_user.password }}"
@@ -125,28 +125,28 @@
 
 - name: Update {{ elasticsearch.logstash_policy.name }} policy if necessary
   block:
-  - name: Filter fields from current {{ elasticsearch.logstash_policy.name }} policy
-    set_fact:
-      current_ism_policy_filtered: "{{ current_ism_policy_filtered | default({}) | combine({item.key: item.value}) }}"
-    when: item.key not in ['error_notification', 'last_updated_time', 'ism_template']
-    loop: "{{ current_ism_policy.json.policy | default({}) | dict2items }}"
+    - name: Filter fields from current {{ elasticsearch.logstash_policy.name }} policy
+      set_fact:
+        current_ism_policy_filtered: "{{ current_ism_policy_filtered | default({}) | combine({item.key: item.value}) }}"
+      when: item.key not in ['error_notification', 'last_updated_time', 'ism_template']
+      loop: "{{ current_ism_policy.json.policy | default({}) | dict2items }}"
 
-  - name: Update {{ elasticsearch.logstash_policy.name }} policy
-    uri:
-      url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_opendistro/_ism/policies/{{ elasticsearch.logstash_policy.name }}?if_seq_no={{ current_ism_policy.json._seq_no }}&if_primary_term={{ current_ism_policy.json._primary_term }}"
-      method: PUT
-      headers:
-        Host: "infra.{{ web_base_domain }}"
-      body: "{{ logstash_policy_content }}"
-      body_format: json
-      validate_certs: no
-      status_code: [ 200 ]
-      force_basic_auth: yes
-      user: "{{ elasticsearch.admin_user.user }}"
-      password: "{{ elasticsearch.admin_user.password }}"
-    register: set_logstash_policy
-    changed_when: True
-    when: current_ism_policy_filtered != logstash_policy_content.policy
+    - name: Update {{ elasticsearch.logstash_policy.name }} policy
+      uri:
+        url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_opendistro/_ism/policies/{{ elasticsearch.logstash_policy.name }}?if_seq_no={{ current_ism_policy.json._seq_no }}&if_primary_term={{ current_ism_policy.json._primary_term }}"
+        method: PUT
+        headers:
+          Host: "elasticsearch.log.intra.{{ web_base_domain }}"
+        body: "{{ logstash_policy_content }}"
+        body_format: json
+        validate_certs: no
+        status_code: [200]
+        force_basic_auth: yes
+        user: "{{ elasticsearch.admin_user.user }}"
+        password: "{{ elasticsearch.admin_user.password }}"
+      register: set_logstash_policy
+      changed_when: True
+      when: current_ism_policy_filtered != logstash_policy_content.policy
   when: current_ism_policy.status != 404
 
 - name: Prepare wanted index settings
@@ -166,12 +166,12 @@
 
 - name: Get current default ElasticSearch index template
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_index_template/default"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_index_template/default"
     method: GET
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     validate_certs: no
-    status_code: [ 200, 404 ]
+    status_code: [200, 404]
     force_basic_auth: yes
     user: "{{ elasticsearch.admin_user.user }}"
     password: "{{ elasticsearch.admin_user.password }}"
@@ -179,12 +179,12 @@
 
 - name: Configure default ElasticSearch index template
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_index_template/default"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_index_template/default"
     method: POST
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     body:
-      index_patterns: [ "*" ]
+      index_patterns: ["*"]
       priority: 0
       template:
         settings: "{{ default_wanted_index_settings }}"
@@ -203,12 +203,12 @@
 
 - name: Get current logstash ElasticSearch index template
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_index_template/logstash"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_index_template/logstash"
     method: GET
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     validate_certs: no
-    status_code: [ 200, 404 ]
+    status_code: [200, 404]
     force_basic_auth: yes
     user: "{{ elasticsearch.admin_user.user }}"
     password: "{{ elasticsearch.admin_user.password }}"
@@ -216,12 +216,12 @@
 
 - name: Configure logstash ElasticSearch index template
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/_index_template/logstash"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/_index_template/logstash"
     method: POST
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     body:
-      index_patterns: [ "logstash-*" ]
+      index_patterns: ["logstash-*"]
       priority: 10
       template:
         settings: "{{ logstash_wanted_index_settings }}"
@@ -240,12 +240,12 @@
 
 - name: List existing ElasticSearch indices
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/*?expand_wildcards=open,hidden"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/*?expand_wildcards=open,hidden"
     method: GET
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     validate_certs: no
-    status_code: [ 200, 404 ]
+    status_code: [200, 404]
     force_basic_auth: yes
     user: "{{ elasticsearch.admin_user.user }}"
     password: "{{ elasticsearch.admin_user.password }}"
@@ -253,10 +253,10 @@
 
 - name: Update existing ElasticSearch default indices
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/{{ item.key }}/_settings"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/{{ item.key }}/_settings"
     method: PUT
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     body:
       index: "{{ default_wanted_index_settings }}"
     body_format: json
@@ -271,15 +271,15 @@
   loop_control:
     label: "{{ item.key }}"
   when:
-   - not item.key is match("logstash.*")
-   - default_wanted_index_settings | dict2items | difference(item.value.settings.index | dict2items)
+    - not item.key is match("logstash.*")
+    - default_wanted_index_settings | dict2items | difference(item.value.settings.index | dict2items)
 
 - name: Update existing ElasticSearch logstash indices
   uri:
-    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_path }}/{{ item.key }}/_settings"
+    url: "https://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_https_port }}{{ elasticsearch.context_root }}/{{ item.key }}/_settings"
     method: PUT
     headers:
-      Host: "infra.{{ web_base_domain }}"
+      Host: "elasticsearch.log.intra.{{ web_base_domain }}"
     body:
       index: "{{ default_wanted_index_settings | combine(logstash_wanted_index_settings) }}"
     body_format: json
@@ -294,5 +294,5 @@
   loop_control:
     label: "{{ item.key }}"
   when:
-   - item.key is match("logstash.*")
-   - default_wanted_index_settings | combine(logstash_wanted_index_settings) | dict2items | difference(item.value.settings.index | dict2items)
+    - item.key is match("logstash.*")
+    - default_wanted_index_settings | combine(logstash_wanted_index_settings) | dict2items | difference(item.value.settings.index | dict2items)
