--- a/ansible/install_applications/vars/logging-elasticsearch.yml
+++ b/ansible/install_applications/vars/logging-elasticsearch.yml
@@ -13,7 +13,7 @@ elasticsearch:
 
   namespace: "{{ _elasticsearch_var_loader.namespace }}"
   base_image: "{{ _elasticsearch_var_loader.base_image }}"
-  
+
   labels_def:
     app.kubernetes.io/name: elasticsearch
     app.kubernetes.io/component: elasticsearch
@@ -22,17 +22,17 @@ elasticsearch:
   labels_desc:
     app.kubernetes.io/version: "{{ _elasticsearch_var_loader.base_image.tag }}"
     app.kubernetes.io/part-of: elasticsearch
-  
+
   container:
     image: "{{ docker_private_registry.url }}/{{ _elasticsearch_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _elasticsearch_var_loader.base_image.tag }}"
     requests_cpu: "{{ elasticsearch_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ elasticsearch_container_requests_memory | default('1024Mi') }}"
     limits_cpu: "{{ elasticsearch_container_limits_cpu | default('750m') }}"
     limits_memory: "{{ elasticsearch_container_limits_memory | default('1024Mi') }}"
-  
+
   servername: "{{ elasticsearch_servername | default('elasticsearch.' + _elasticsearch_var_loader.namespace + '.svc.cluster.local') }}"
 
-  context_path: "{{ elasticsearch_context_path | default('/') }}"
+  context_root: "{{ elasticsearch_context_root | default('') }}"
   replicas: "{{ elasticsearch_replicas | default(1) }}"
   cluster_name: "{{ _elasticsearch_var_loader.cluster_name }}"
   max_java_memory: "{{ elasticsearch_max_java_memory | default('512m') }}"
@@ -68,7 +68,7 @@ _elasticsearch_exporter_var_loader:
 
 elasticsearch_exporter:
   base_image: "{{ _elasticsearch_exporter_var_loader.base_image }}"
-  
+
   labels_def:
     app.kubernetes.io/name: elasticsearch
     app.kubernetes.io/component: exporter
@@ -76,14 +76,13 @@ elasticsearch_exporter:
   labels_desc:
     app.kubernetes.io/version: "{{ _elasticsearch_exporter_var_loader.base_image.tag }}"
     app.kubernetes.io/part-of: elasticsearch
-  
+
   container:
     image: "{{ docker_private_registry.url }}/{{ _elasticsearch_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _elasticsearch_exporter_var_loader.base_image.tag }}"
     requests_cpu: "{{ elasticsearch_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ elasticsearch_exporter_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ elasticsearch_exporter_container_limits_cpu | default('100m') }}"
     limits_memory: "{{ elasticsearch_exporter_container_limits_memory | default('128Mi') }}"
-
 
   user: "{{ elasticsearch_exporter_user | default('exporter') }}"
   password: "{{ elasticsearch_exporter_password | default('password') }}"
