--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -114,12 +114,12 @@ homer_config_services:
     items:
       - name: "Prometheus"
         logo: "assets/download/prometheus.svg"
-        url: "https://infra.{{ web_base_domain }}/prometheus/"
+        url: "https://prometheus.monitoring.intra.{{ web_base_domain }}/{{ prometheus.context_root }}"
         subtitle: "Monitoring solution"
         target: "_blank"
       - name: "AlertManager"
         logo: "assets/download/prometheus.svg"
-        url: "https://infra.{{ web_base_domain }}/alertmanager/"
+        url: "https://alertmanager.monitoring.intra.{{ web_base_domain }}/{{ alertmanager.context_root }}"
         subtitle: "Alert manager for Prometheus"
         target: "_blank"
       - name: "Grafana"
